2007-09-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (GetImageCharacteristics): Add progress monitor support.
	* magick/color.c (IsMonochromeImage): Add progress monitor support.
	(IsGrayImage): Add progress monitor support.
	(IsOpaqueImage): Add progress monitor support.
	* coders/dpx.c (ReadDPXImage): Added progress indication.
	* coders/cineon.c (WriteCINEONImage): Added progress indication.
	* magick/command.c : Added a -monitor command option for
	'composite', 'convert', 'identify', 'mogrify', and 'montage' in
	order to enable a simple progress indicator.

2007-09-06  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c Write native gray MAT data when gray image is detected.

2007-09-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (GetExecutionPath): Add support for Apple OS-X,
	Linux, and FreeBSD.

2007-09-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: For Windows MinGW-based build, find Ghostscript
	fonts installed under C:/Program Files/.
	* VisualMagick/bin/delegates.mgk: Adjust quoting to Ghostscript arguments
	so that Ghostscript DLL is passed correct commands.
	* config/delegates.mgk.in: Adjust quoting to Ghostscript arguments
	so that Ghostscript DLL is passed correct commands.
	* configure.ac: Provide defaults for GSColorAlphaDevice and GSGrayDevice.
	* magick/nt_base.c (NTGhostscriptGetString): Support "GPL Ghostscript".

2007-09-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/ps.c (WritePSImage): Improved Postscript writer
	performance.

2007-09-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/profile.c (AllocateImageProfileIterator): New function to
	allocate an image profile iterator.
	(DeallocateImageProfileIterator): New function to deallocate an
	image profile iterator.
	(NextImageProfile): New function to advance the image profile
	iterator to the next profile.
	* magick/image.h (Image): Profiles are now stored in a generic