@@ -1,3 +1,9 @@
+2007-09-07  Fojtik Jaroslav  <JaFojtik@seznam.cz>
+
+	* coders/mat.c The flop image has been eliminated in a reader.
+	Code has been shrinked a little bit.
+
+
 2007-09-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/image.c (GetImageCharacteristics): Add progress monitor support.
